--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,6 +42,7 @@ coil-ktor3-ios = { group = "io.ktor", name = "ktor-client-darwin", version.ref =
 coil-ktor3-wasmjs = { group = "io.ktor", name = "ktor-client-core-wasm-js", version.ref = "ktor" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
+koin-android = { module = "io.insert-koin:koin-android" }
 koin-composeVM = { module = "io.insert-koin:koin-compose-viewmodel" }
 
 [plugins]
