booking form functionality (except ios)

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ captures
 !*.xcodeproj/project.xcworkspace/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+/composeApp/src/commonMain/kotlin/com/house_shoreditch/app/Secrets.kt
+/secrets.properties
