--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ captures
 **/xcshareddata/WorkspaceSettings.xcsettings
 /composeApp/src/commonMain/kotlin/com/house_shoreditch/app/Secrets.kt
 /secrets.properties
+iosApp/Configuration/Config.xcconfig
