--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -3,6 +3,12 @@ name: Website publish CI
 on:
   pull_request:
     branches: [ "main" ]
+  push:
+    branches: [ "main" ]
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   build:
