--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -25,6 +25,22 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      # Decode Keystore and secrets.properties
+      - name: secrets file
+        run: |
+          echo "$SECRETS_FILE"
+
+      - name: Decode secrets and keystore
+        run: |
+          echo "$SECRETS_FILE" > $GITHUB_WORKSPACE/secrets.properties
+
+      - name: Workspace path
+        run: |
+          echo "workspace: $GITHUB_WORKSPACE"
+
       - name: Build WASM distribution
         run: ./gradlew wasmJsBrowserDistribution
 
