--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -2,7 +2,7 @@ name: Website publish CI
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "feature/*" ]
   push:
     branches: [ "main" ]
 
