--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           echo "$SECRETS_FILE" > $GITHUB_WORKSPACE/secrets.properties
         env:
-          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+          SECRETS_FILE: ${{ secrets.SECRETS_FILE }}
 
       - name: Build WASM distribution
         run: ./gradlew wasmJsBrowserDistribution
