--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -2,7 +2,7 @@ name: Website publish CI
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "feature/*" ]
   push:
     branches: [ "main" ]
 
@@ -24,6 +24,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Decode secrets
+        run: |
+          echo "$SECRETS_FILE" > $GITHUB_WORKSPACE/secrets.properties
+        env:
+          SECRETS_FILE: ${{ secrets.SECRETS_FILE }}
 
       - name: Build WASM distribution
         run: ./gradlew wasmJsBrowserDistribution
