--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,3 @@
 #include "Secrets.xcconfig"
-BUNDLE_ID=com.house-shoreditch.app.Osric
+BUNDLE_ID=com.house-shoreditch.app.Oasis
 APP_NAME=Oasis Shoreditch
