--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,10 @@
 [versions]
 version-code = "1"
-version-name = "1.0"
+version-name = "1.0.0"
+app-pkg = "com.oasis_shoreditch.app"
+app-name = "Oasis shoreditch"
+app-vendor = "Sentinel Web Technologies Ltd"
+app-description = "Come stay with us in London"
 agp = "8.5.2"
 android-compileSdk = "34"
 android-minSdk = "24"
