test mac desktop CI 2

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -1,8 +1,8 @@
 name: Website publish CI
 
 on:
-  pull_request:
-    branches: [ "main", "feature/*" ]
+#  pull_request:
+#    branches: [ "main" ]
   push:
     branches: [ "main" ]
 
