linux ci workflow 3

--- a/.github/workflows/desktop_linux.yml
+++ b/.github/workflows/desktop_linux.yml
@@ -2,7 +2,7 @@ name: Desktop DEB artifact CI
 
 on:
   push:
-    branches: [ "main", "feature/*"]
+    branches: [ "main"]
 
 jobs:
     build-deb:
