win ci workflow 2

--- a/.github/workflows/desktop_win.yml
+++ b/.github/workflows/desktop_win.yml
@@ -2,7 +2,7 @@ name: Desktop MSI artifact CI
 
 on:
   push:
-    branches: [ "main"]
+    branches: [ "main", "feature/*"]
 
 jobs:
     build-msi:
