test win desktop CI 3

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ app-pkg = "com.oasis_shoreditch.app"
 app-name = "Oasis_shoreditch"
 app-vendor = "Sentinel Web Technologies Ltd"
 app-description = "Come stay with us in London"
+app-menugroup = "Other"
 agp = "8.5.2"
 android-compileSdk = "34"
 android-minSdk = "24"
