--- a/.github/workflows/desktop_win.yml
+++ b/.github/workflows/desktop_win.yml
@@ -28,8 +28,8 @@ jobs:
 
         # Build the MSI file using the custom Gradle task
       - name: Package MSI
-#        run: ./gradlew packageReleaseMsi
-        run: ./gradlew buildMsi
+        run: ./gradlew packageReleaseMsi
+#        run: ./gradlew buildMsi
 
         # Upload MSI as an artifact
       - name: Upload MSI as artifact
