test win desktop CI 6 - cleanup - msi doesnt have internet - local build ok

--- a/.github/workflows/desktop_win.yml
+++ b/.github/workflows/desktop_win.yml
@@ -2,13 +2,13 @@ name: Desktop MSI artifact CI
 
 on:
   push:
-    branches: [ "main", "feature/*"]
+    branches: [ "main" ]
 
 jobs:
-    build-msi:
-      runs-on: windows-latest
+  build-msi:
+    runs-on: windows-latest
 
-      steps:
+    steps:
       - uses: actions/checkout@v4
       - name: set up JDK 21
         uses: actions/setup-java@v4
@@ -29,7 +29,6 @@ jobs:
         # Build the MSI file using the custom Gradle task
       - name: Package MSI
         run: ./gradlew packageReleaseMsi
-#        run: ./gradlew buildMsi
 
         # Upload MSI as an artifact
       - name: Upload MSI as artifact
