--- a/.github/workflows/desktop_win.yml
+++ b/.github/workflows/desktop_win.yml
@@ -1,14 +1,14 @@
-name: Desktop DMG artifact CI
+name: Desktop MSI artifact CI
 
 on:
   push:
-    branches: [ "main"]
+    branches: [ "main" ]
 
 jobs:
-    build-dmg:
-      runs-on: macos-latest
+  build-msi:
+    runs-on: windows-latest
 
-      steps:
+    steps:
       - uses: actions/checkout@v4
       - name: set up JDK 21
         uses: actions/setup-java@v4
@@ -26,14 +26,14 @@ jobs:
         env:
           SECRETS_FILE: ${{ secrets.SECRETS_FILE }}
 
-        # SBuild the DMG file using the custom Gradle task
-      - name: Package DMG
-        run: ./gradlew packageReleaseDmg
+        # Build the MSI file using the custom Gradle task
+      - name: Package MSI
+        run: ./gradlew packageReleaseMsi
 
-        # Upload DMG as an artifact
-      - name: Upload DMG as artifact
+        # Upload MSI as an artifact
+      - name: Upload MSI as artifact
         uses: actions/upload-artifact@v3
         with:
-          name: Oasis_Shoreditch.dmg
-          path: composeApp/build/compose/binaries/main-release/dmg/*.dmg
+          name: Oasis_Shoreditch.msi
+          path: composeApp/build/compose/binaries/main-release/msi/*.msi
 
