--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main", "feature/*" ]
 
 jobs:
-  build:
+  build-develop:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
