make android develop & release ci 7

--- a/.github/workflows/release_android.yml
+++ b/.github/workflows/release_android.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Decode secrets and keystore
         run: |
           echo "$KEYSTORE_BASE64" | base64 --decode > $GITHUB_WORKSPACE/oasis-release-upload-keystore.jks
-          echo "SECRETS_FILE" > $GITHUB_WORKSPACE/secrets.properties
+          echo "$SECRETS_FILE" > $GITHUB_WORKSPACE/secrets.properties
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
           SECRETS_FILE: ${{ secrets.SECRETS_FILE }}
