make android develop & release ci 10

--- a/.github/workflows/release_android.yml
+++ b/.github/workflows/release_android.yml
@@ -2,7 +2,7 @@ name: Android Release CI
 
 on:
   push:
-    branches: [ "main", "feature/*" ]
+    branches: [ "main" ]
 
 jobs:
   build-release-android:
