--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -39,7 +39,10 @@ jobs:
         # Step : Build the KMM Framework
       - name: Build KMM Framework
         run: |
-          ./gradlew :composeApp:embedAndSignAppleFrameworkForXcode
+          ./gradlew :composeApp:embedAndSignAppleFrameworkForXcode \
+            -PxcodeConfiguration=Release \
+            -Pkotlin.native.cocoapods.generateWrapper=false \
+            -Pkotlin.native.targets=iosArm64,iosSimulatorArm64
 
       # Step : Build the App
       - name: Build the iOS app
