--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -43,8 +43,7 @@ jobs:
             -PxcodeConfiguration=Release \
             -Pkotlin.native.cocoapods.generateWrapper=false \
             -PxcodeTargetArchs=arm64 \ 
-            -Pkotlin.native.targets=iosArm64,iosSimulatorArm64 \
-            --info
+            -Pkotlin.native.targets=iosArm64,iosSimulatorArm64
 
       # Step : Build the App
       - name: Build the iOS app
