--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -36,15 +36,14 @@ jobs:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
           SECRETS_FILE: ${{ secrets.SECRETS_FILE }}
 
-      # Step : testing assembleIosX64MainResources
+#      # Step : Build the KMM Framework
+#      - name: Build KMM Framework
+#        run: |
+#          ./gradlew :composeApp:embedAndSignAppleFrameworkForXcode -PxcodeConfiguration=Release -Pkotlin.native.cocoapods.generateWrapper=false -PxcodeTargetArchs=arm64 -Pkotlin.native.targets=iosArm64,iosSimulatorArm64 --info
       - name: Build KMM Framework
         run: |
-          ./gradlew :composeApp:assembleIosX64MainResources -PxcodeConfiguration=Release -Pkotlin.native.cocoapods.generateWrapper=false -PxcodeTargetArchs=arm64 -Pkotlin.native.targets=iosArm64,iosSimulatorArm64 --info
-
-      # Step : Build the KMM Framework
-      - name: Build KMM Framework
-        run: |
-          ./gradlew :composeApp:assembleIosX64MainResources :composeApp:embedAndSignAppleFrameworkForXcode -PxcodeConfiguration=Release -Pkotlin.native.cocoapods.generateWrapper=false -PxcodeTargetArchs=arm64 -Pkotlin.native.targets=iosArm64,iosSimulatorArm64 --info
+          ./gradlew :composeApp:linkReleaseFrameworkIosArm64
+          ./gradlew :composeApp:linkReleaseFrameworkIosSimulatorArm64
 
       # Step : Build the App
       - name: Build the iOS app
