--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -56,6 +56,7 @@ jobs:
             -archivePath $GITHUB_WORKSPACE/build/Oasis.xcarchive
 
       # Step 5: Export the IPA (App Bundle)
+      # create provisioning profile https://developer.apple.com/account/resources/profiles/add
       - name: Export IPA
         run: |
           xcodebuild -exportArchive \
