--- a/.github/workflows/release_desktop_mac.yml
+++ b/.github/workflows/release_desktop_mac.yml
@@ -3,6 +3,9 @@ name: Desktop DMG artifact CI
 on:
   push:
     branches: [ "main"]
+  pull_request:
+    branches:
+      - "bugfix/*"
 
 jobs:
     build-dmg:
