--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ junit = "4.13.2"
 kotlin = "2.0.21"
 kotlinx-coroutines = "1.9.0"
 coil = "3.0.4"
-ktor = "3.0.2"
+ktor = "3.1.0"
 koin-bom = "4.0.1"
 kotlinx-datetime = "0.6.1"
 
@@ -47,6 +47,8 @@ coil-ktor3-android = { group = "io.ktor", name = "ktor-client-android", version.
 coil-ktor3-desktop = { group = "io.ktor", name = "ktor-client-java", version.ref = "ktor" }
 coil-ktor3-ios = { group = "io.ktor", name = "ktor-client-darwin", version.ref = "ktor" }
 coil-ktor3-wasmjs = { group = "io.ktor", name = "ktor-client-core-wasm-js", version.ref = "ktor" }
+#ktor-core = { group = "io.ktor", name = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
 koin-android = { module = "io.insert-koin:koin-android" }
