19 working on local build - test on ci 2

--- a/.github/workflows/release_desktop_mac.yml
+++ b/.github/workflows/release_desktop_mac.yml
@@ -2,10 +2,7 @@ name: Desktop DMG artifact CI
 
 on:
   push:
-    branches: [ "main"]
-  pull_request:
-    branches:
-      - "bugfix/*"
+    branches: [ "main", "bugfix/*"]
 
 jobs:
     build-dmg:
