--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,7 +47,7 @@ coil-ktor3-android = { group = "io.ktor", name = "ktor-client-android", version.
 coil-ktor3-desktop = { group = "io.ktor", name = "ktor-client-java", version.ref = "ktor" }
 coil-ktor3-ios = { group = "io.ktor", name = "ktor-client-darwin", version.ref = "ktor" }
 coil-ktor3-wasmjs = { group = "io.ktor", name = "ktor-client-core-wasm-js", version.ref = "ktor" }
-#ktor-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
+ktor-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
 koin-android = { module = "io.insert-koin:koin-android" }
