test ios ci build #8 - add auth key

--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -42,6 +42,16 @@ jobs:
         run: |
           ./gradlew :composeApp:linkReleaseFrameworkIosArm64
           ./gradlew :composeApp:linkReleaseFrameworkIosSimulatorArm64
+      - name: Authenticate with Apple API Key
+        run: |
+          echo "${APPLE_API_KEY_BASE64}" | base64 --decode > AuthKey.p8
+          xcrun altool --list-providers \
+            --apiKey $APPLE_KEY_ID \
+            --apiIssuer $APPLE_ISSUER_ID
+        env:
+          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
+          $APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+          APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
 
       # Step : Build the App
       - name: Build the iOS app
