--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build KMM Framework
         run: |
           ./gradlew :composeApp:linkReleaseFrameworkIosArm64
-          ./gradlew :composeApp:linkReleaseFrameworkIosSimulatorArm64
+#          ./gradlew :composeApp:linkReleaseFrameworkIosSimulatorArm64
       - name: Authenticate with Apple API Key
         run: |
           echo "${APPLE_API_KEY_BASE64}" | base64 --decode > AuthKey.p8
