--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -46,15 +46,23 @@ jobs:
       - name: Set up App Store Connect API Key
         run: |
           mkdir -p ~/.appstoreconnect/private_keys
-          echo "${{ secrets.APPLE_API_KEY_BASE64 }}" | base64 --decode > ~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_KEY_ID }}.p8
+          echo "$APPLE_API_KEY_BASE64" > ~/.appstoreconnect/private_keys/AuthKey_$APPLE_KEY_ID.p8
+        env:
+          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
+          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
 
       - name: Authenticate with Apple API Key
         run: |
+          echo "${APPLE_API_KEY_BASE64}" | base64 --decode > AuthKey.p8
           echo $APPLE_KEY_ID
           echo $APPLE_ISSUER_ID
           xcrun altool --list-providers \
             --apiKey ${{ secrets.APPLE_KEY_ID }} \
             --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
+        env:
+          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
+          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+          APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
 
       # Step : Build the App
       - name: Build the iOS app
