test ios ci build #15

--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -47,8 +47,7 @@ jobs:
         run: |
           mkdir -p ~/.appstoreconnect/private_keys
           echo "~/.appstoreconnect/private_keys/AuthKey_$APPLE_KEY_ID.p8"
-          FILENAME = "~/.appstoreconnect/private_keys/AuthKey_$APPLE_KEY_ID.p8"
-          echo "$APPLE_API_KEY_BASE64" | base64 --decode > $FILENAME
+          echo "$APPLE_API_KEY_BASE64" | base64 --decode > "~/.appstoreconnect/private_keys/AuthKey_$APPLE_KEY_ID.p8"
           ls
         env:
           APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
