--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,3 @@
 #include "Secrets.xcconfig"
-BUNDLE_ID=com.house-shoreditch.app.Oasis
+BUNDLE_ID=com.house-shoreditch.app.OasisShoreditch
 APP_NAME=Oasis Shoreditch
