--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -40,26 +40,56 @@ jobs:
 
       - name: Build KMM Framework
         run: |
-#          ./gradlew :composeApp:linkReleaseFrameworkIosArm64
-#          ./gradlew :composeApp:linkReleaseFrameworkIosSimulatorArm64
+          ./gradlew :composeApp:linkReleaseFrameworkIosArm64
+          ./gradlew :composeApp:linkReleaseFrameworkIosSimulatorArm64
+#
+#      - name: Set up App Store Connect API Key
+#        run: |
+#          mkdir -p ~/.appstoreconnect/private_keys
+#          echo "$APPLE_API_KEY_BASE64" | base64 --decode > "$HOME/.appstoreconnect/private_keys/AuthKey_$APPLE_KEY_ID.p8"
+#        env:
+#          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
+#          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+#
+#      - name: Authenticate with Apple API Key
+#        run: |
+#          xcrun altool --list-providers \
+#            --apiKey ${{ secrets.APPLE_KEY_ID }} \
+#            --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
+#        env:
+#          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
+#          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+#          APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
 
-      - name: Set up App Store Connect API Key
-        run: |
-          mkdir -p ~/.appstoreconnect/private_keys
-          echo "$APPLE_API_KEY_BASE64" | base64 --decode > "$HOME/.appstoreconnect/private_keys/AuthKey_$APPLE_KEY_ID.p8"
+      - name: Install the Apple certificate and provisioning profile
         env:
-          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
-          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.APPLE_BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.APPLE_P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.APPLE_BUILD_PROVISION_PROFILE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
-      - name: Authenticate with Apple API Key
-        run: |
-          xcrun altool --list-providers \
-            --apiKey ${{ secrets.APPLE_KEY_ID }} \
-            --apiIssuer ${{ secrets.APPLE_ISSUER_ID }}
-        env:
-          APPLE_API_KEY_BASE64: ${{ secrets.APPLE_API_KEY_BASE64 }}
-          APPLE_KEY_ID: ${{ secrets.APPLE_KEY_ID }}
-          APPLE_ISSUER_ID: ${{ secrets.APPLE_ISSUER_ID }}
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
       # Step : Build the App
       - name: Build the iOS app
@@ -72,6 +102,7 @@ jobs:
             -archivePath $GITHUB_WORKSPACE/build/OasisShoreditch.xcarchive \
             -allowProvisioningUpdates
             -destination 'generic/platform=iOS' \
+            -verbose \
             CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
         env:
           API_KEY_PATH: "~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APPLE_KEY_ID }}.p8"
